# bevy_multiplayer_example

./: Cargo.toml  README.md
src/: client.rs  core.rs  input.rs  main.rs  server.rs  stats.rs
