[package]
name = "topdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.1" }
serde = { version = "1.0", features = ["derive"] }
bevy_renet = { version = "0.0.11" }
clap = { version = "4.5.4", features = ["derive"] }
bincode = "1.3.3"
